# fastapi-backend

./: .env.dev  README.txt  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
fastapi_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: cli.py  main.py
src/api/dependencies/: deps.py
src/api/v1/: router.py
src/api/v1/auth/: guards.py  paths.py  router.py  schemas.py  service.py
src/api/v1/user/: models.py  paths.py  repository.py  router.py  schemas.py  service.py
src/core/: cache.py  config.py  errors.py  exceptions.py  handlers.py  log_models.py  middlewares.py  redis_keys.py  response.py  security.py
src/core/middlewares/: __init__.py  logging.py
src/db/: base.py  base_models.py  note  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 6192490c24aa_fixed_user_model.py  9dcf09a92dc3_init.py  af0cc8bd91c8_add_firstname_lastname_and_password_to_.py
src/routers/: user_router.py
src/schemas/: user_schema.py
src/services/: user_service.py
