[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic-settings",
]

[project.scripts]
api = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
